--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,16 @@
+default_language_version:
+  python: python3
+
 repos:
--   repo: https://gitlab.com/pycqa/flake8
-    rev: master
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.4
     hooks:
-    -   id: flake8
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.2
+      - id: flake8
+  - repo: https://github.com/pycqa/isort
+    rev: 5.6.3
     hooks:
-    -   id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: master
+      - id: isort
+  - repo: https://github.com/psf/black
+    rev: 20.8b1
     hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
-    rev: stable
-    hooks:
-    - id: black
-      language_version: python3.7
+      - id: black
