CI: Allow manual trigger of tagged-release

--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -1,11 +1,9 @@
----
 name: tagged-release
-
 on:
   push:
     tags:
       - v*
-
+  workflow_dispatch:
 jobs:
   tagged-release:
     name: Tagged Release
