--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ pytest = ">=4.0.0"
 pytest-cov = "^2.11.1"
 requests = "^2.25.1"
 mypy = "^0.812"
+flake8 = "^3.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
