--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: tagged-release
+name: Continuous Delivery
 on:
   push:
     tags:
@@ -17,10 +17,14 @@ jobs:
           poetry-version: 1.1.5
       - name: Build
         run: poetry build
-      - uses: marvinpinto/action-automatic-releases@latest
+      - uses: marvinpinto/action-automatic-releases@v1.1.0
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
             dist/*.whl
             dist/*.tar.gz
+      - name: Publish to PyPI
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
+        run: poetry publish
