--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,8 +4,7 @@ on:
     tags:
       - v*
 jobs:
-  tagged-release:
-    name: Tagged Release
+  cd:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,7 +16,7 @@ jobs:
           poetry-version: 1.1.5
       - name: Build
         run: poetry build
-      - uses: marvinpinto/action-automatic-releases@v1.1.0
+      - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
