--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-security"
-version = "0.3.1"
+version = "0.4.0"
 description = "Add authentication and authorization to your FastAPI app via dependencies."
 authors = ["Jacob Magnusson <m@jacobian.se>"]
 license = "MIT"
@@ -9,7 +9,7 @@ homepage = "https://jmagnusson.github.io/fastapi-security/"
 repository = "https://github.com/jmagnusson/fastapi-security"
 documentation = "https://jmagnusson.github.io/fastapi-security/"
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "Framework :: AsyncIO",
     "Intended Audience :: Developers",
