fix!: Make oauth2 dependencies optional
This ensures that a minimal amount of dependencies are brought in.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,4 +18,4 @@ repos:
     rev: v0.931
     hooks:
       - id: mypy
-        additional_dependencies: [pydantic]
+        additional_dependencies: [pydantic, types-requests]
