--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
-      - uses: abatilo/actions-poetry@v2.1.0
+          python-version: '3.10'
+      - uses: abatilo/actions-poetry@v2.1.4
         with:
-          poetry-version: 1.1.5
+          poetry-version: '1.1.13'
       - name: Build
         run: poetry build
       - uses: marvinpinto/action-automatic-releases@latest
