--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,20 +5,38 @@ on:
   pull_request:
 
 jobs:
-  ci:
+  unittests:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.9, 3.8, 3.7, 3.6]
+        python-version: ['3.10', '3.9', '3.8', '3.7']
         os: [ubuntu-latest, macos-latest, windows-latest]
+        extras: ["", "oauth2"]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: abatilo/actions-poetry@v2.1.0
+    - uses: abatilo/actions-poetry@v2.1.4
+      with:
+        poetry-version: '1.1.13'
+    - run: poetry install --extras ${{ matrix.extras }}
+      if: matrix.extras != ''
     - run: poetry install
+      if: matrix.extras == ''
     - run: poetry run pytest -v
+
+  style:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - uses: abatilo/actions-poetry@v2.1.4
+      with:
+        poetry-version: '1.1.13'
+    - run: poetry install --extras oauth2
     - run: poetry run flake8
     - run: poetry run mypy --ignore-missing-imports .
     - run: poetry run isort --check --diff .
