--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,9 +11,11 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.9
-    - uses: abatilo/actions-poetry@v2.1.0
-    - run: poetry install
+        python-version: '3.10'
+    - uses: abatilo/actions-poetry@v2.1.4
+      with:
+        poetry-version: '1.1.13'
+    - run: poetry install --extras oauth2
     - run: poetry run pytest --cov=fastapi_security --cov-report=xml --cov-report=term
     - uses: codecov/codecov-action@v1
       with:
