--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
-      - uses: abatilo/actions-poetry@v2.1.0
+          python-version: '3.10'
+      - uses: abatilo/actions-poetry@v2.1.4
         with:
-          poetry-version: 1.1.5
+          poetry-version: '1.1.13'
       - run: poetry install
       - run: poetry run mkdocs build
       - uses: peaceiris/actions-gh-pages@v3.7.3
