--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,10 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python",
     "Topic :: Internet :: WWW/HTTP",
@@ -33,24 +33,29 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4.0"
-aiohttp = "^3"
+python = ">=3.7,<4.0"
+aiohttp = { version = "^3", optional = true }
 fastapi = "^0"
 pydantic = "^1"
-PyJWT = {version = "^2", extras = ["crypto"]}
+PyJWT = { version = "^2", extras = ["crypto"], optional = true }
+
+[tool.poetry.extras]
+oauth2 = ["aiohttp", "PyJWT"]
 
 [tool.poetry.dev-dependencies]
-aioresponses = "^0.7.2"
-black = "^21.11b0"
-isort = "^5.7.0"
-pytest = "^6"
-pytest-cov = "^2.11.1"
-requests = "^2.25.1"
-mypy = "^0.812"
-flake8 = "^3.9.0"
-mkdocs-material = "^7.0.6"
-pytest-asyncio = "^0.14.0"
-uvicorn = "^0.13.4"
+aioresponses = "^0.7.3"
+black = "^22.1.0"
+isort = "^5.10.1"
+pytest = "^7.0.1"
+pytest-cov = "^3.0.0"
+requests = "^2.27.1"
+mypy = "^0.931"
+flake8 = "^4.0.1"
+mkdocs-material = "^8.2.4"
+pytest-asyncio = "^0.18.1"
+uvicorn = "^0.17.5"
+types-requests = "^2.27.11"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -64,3 +69,4 @@ target-version = ['py37', 'py38']
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
+asyncio_mode = "strict"
